# NexusMesh

./: .gitignore
Engine/: CMakeLists.txt  vcpkg.json
Engine/include/: node.h
Engine/include/core/: boundary.hpp  dijkstra.hpp  quadtree.hpp  service_class.hpp  wifi_node.hpp
Engine/include/services/: engine_service.hpp
Engine/include/utils/: logger.hpp
Engine/src/: main.cpp  simulation.cpp
Engine/src/core/: dijkstra.cpp  quadtree.cpp  service_class.cpp  wifi_node.cpp
Engine/src/services/: engine_service.cpp
Orchestrator/: .prettierignore  package-lock.json  package.json
